--- a/HandiMap/views/search_results.pug
+++ b/HandiMap/views/search_results.pug
@@ -1,13 +1,9 @@
-extends layout
-
-block content
-  h2 Results for "#{query}"
-  ul.results
-    each item in items
-      li.result-item(style='display: flex; justify-content: space-between; align-items: center; position: relative;')
-        .info
-          h3= item.nom
-          p= item.type_lieu + ' – ' + item.proprietaire_prenom + ' ' + item.proprietaire_nom
+ul.results
+  each item in items
+    li.result-item(style='display: flex; justify-content: space-between; align-items: center; position: relative;')
+      .info
+        h3= item.nom
+        p= item.type_lieu + ' – ' + item.proprietaire_prenom + ' ' + item.proprietaire_nom
         if item.note
           - const note = item.note.note_global
           - const details = []
@@ -21,15 +17,15 @@ block content
             span.circle
             span.circle
             span.circle
-            .tooltip
-              each cat in details
-                .tooltip-row
-                  span.label= cat[0]
-                  .circle-rating(data-grade=cat[1])
-                    span.circle
-                    span.circle
-                    span.circle
-                    span.circle
-                    span.circle
+          .tooltip
+            each cat in details
+              .tooltip-row
+                span.label= cat[0]
+                .circle-rating(data-grade=cat[1])
+                  span.circle
+                  span.circle
+                  span.circle
+                  span.circle
+                  span.circle
         else
-          a.btn-answer(href='/questionnaire/' + item.id) Answer
+          a.btn-answer(href='/questionnaire/' + item.id) Répondre
