--- a/HandiMap/views/layout.pug
+++ b/HandiMap/views/layout.pug
@@ -16,4 +16,5 @@ html
     block content
     script(src='/js/circle-rating.js')
     script(src='/js/search.js')
+    script(src='/js/avis.js')
     
