--- a/HandiMap/views/index.pug
+++ b/HandiMap/views/index.pug
@@ -31,7 +31,8 @@ block content
       each item in items
         li.result-item(style='display: flex; justify-content: space-between; align-items: center; position: relative; flex-direction: column;')
           .info
-            h3= item.nom
+            h3
+              a(href='https://www.google.com/maps/search/?api=1&query=' + encodeURIComponent(item.adresse), target='_blank')= item.nom
             p= item.type_lieu + ' – ' + item.proprietaire_prenom + ' ' + item.proprietaire_nom
 
             if item.note
@@ -86,5 +87,3 @@ block content
                 button(type='submit') Poster mon avis
   else
     p Aucun établissement trouvé.
-
-  
