--- a/HandiMap/views/layout.pug
+++ b/HandiMap/views/layout.pug
@@ -17,4 +17,5 @@ html
     script(src='/js/circle-rating.js')
     script(src='/js/search.js')
     script(src='/js/avis.js')
-    
+    script(src='/js/avis_etablissement.js')
+
